--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,18 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2em;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
 
 .card {
@@ -39,4 +21,84 @@
 
 .read-the-docs {
   color: #888;
+}
+
+ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+}
+
+.list-article-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.list-article-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+
+  margin: 0.5em;
+  background-color: rgb(242, 249, 253);
+  width: auto;
+  flex: 1;
+}
+
+.list-article-container:hover {
+  background-color: rgba(175, 223, 255, 0.3);
+}
+
+.img-article-list {
+  margin: 1em;
+  min-width: 10em;
+  max-width: 100%;
+  border-radius: 2%;
+}
+
+.article-list-body {
+  position: absolute;
+  bottom: 5px;
+  margin-top: 20px;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: rows;
+  justify-content: space-around;
+  font-size: 0.8rem;
+}
+
+.article-list-header {
+  text-align: left;
+  margin: 0 10px 30px 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.article-list-header > h3 {
+  font-size: 0.8rem;
+  text-align: center;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+.article-list-header > p {
+  font-size: 0.7rem;
+  text-align: center;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+.heart-icon {
+  width: 1em;
+  margin-right: 1rem;
 }
