--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,12 @@
 
 * {
   margin: 0;
-}
-
-body {
-  width: 100%;
+  max-width: 600px;
+  margin: auto;
 }
 
 #root {
+  max-width: 1280px;
   margin: 0 auto;
   padding: 2em;
   text-align: center;
@@ -143,7 +142,7 @@ ul {
 }
 
 .each-article {
-  width: 90%;
+  width: 90vw;
   font-size: 1rem;
   display: flex;
   flex-direction: column;
@@ -220,4 +219,29 @@ ul {
 
 .search-bar-elements-group > label {
   padding-right: 10px;
+}
+
+button {
+  border: none;
+  padding: 0.3em;
+  font-family: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  background-color: #d1d1d1;
+}
+
+h1 {
+  font-size: 2em;
+  line-height: 1.1;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
 }
